salesforce/force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction</label>
    <pluralLabel>Payment Transactions</pluralLabel>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <description>Record all payment transactions linked to Opportunities</description>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>