salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <description>Hotel DB transaction UUID for integration idempotency</description>
    <externalId>true</externalId>
    <type>Text</type>
    <length>50</length>
</CustomField>