salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <description>Last 4 digits of card number (if applicable)</description>
    <type>Text</type>
    <length>4</length>
</CustomField>