salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <label>Receipt URL</label>
    <description>Link to Stripe receipt</description>
    <type>Url</type>
</CustomField>