salesforce/force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Transaction_ID__c</fullName>
    <label>Stripe Transaction ID</label>
    <description>Stripe charge/payment ID for integration idempotency</description>
    <externalId>true</externalId>
    <type>Text</type>
    <length>100</length>
</CustomField>